# git-meta-rs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  rust.yml
examples/: expand-partial-commit.rs  files-changed.rs  new_commits.rs  open.rs  path_changed.rs
src/: clone.rs  info.rs  lib.rs  repo.rs  types.rs
tests/: expand.rs  mod.rs  new_commits.rs  open_repo.rs  path_changed.rs
